# OrderBook

./: .gitignore  pyproject.toml  test.py  test_t.ipynb
funex/: orderbook.py  structures.py
notebooks/: test_t.ipynb
src/funex/: order_structs.py  orderbook.py  test.py
